--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# APP ID
-NEXT_PUBLIC_APP_ID=
-# APP API key
-NEXT_PUBLIC_APP_KEY=
-# API url prefix
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_APP_ID='0ae32274-7815-443a-9c41-dcd7faa18ac6' 
+NEXT_PUBLIC_APP_KEY='app-DdBYtb5eq2P9tAyLTMYqOpQd' 
+NEXT_PUBLIC_API_URL='http://ai.okba.co/v1'
